<resources>

    <string name="app_name">Gol a Gol</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_save_score">Gol a Gol</string>

    <color name="green">#003300</color>
    <color name="white">#FFF</color>
    <color name="black">#000</color>
    <color name="gray">#EEE</color>
    <color name="graydarker">#555</color>

    <string name="umazero">1 x 0</string>
    <string name="banner">Banner</string>
    <string name="arena">Arena</string>


    <string name="date">Data</string>
    <string name="quantity">Quantos gols?</string>
    <string name="registerScore">Rabisca aí!!</string>
    <string name="title_activity_confirm_score">Gol a Gol - Confirmação</string>
    <string name="confirm">[Confirmação]</string>
    <string name="info">Info</string>
    <string name="export">Exportar</string>
    <string name="importfile">Importar</string>
    <string name="msgQuantityNull">Só faltou falar quantos gols!</string>
    <string name="textConfirm">vazio</string>

    <color name="grey">#BBB</color>

    <string name="post_on_fb">Postar no Facebook</string>
    <string name="log_to_fb">Logar no Facebook</string>
    <string name="close">Fechar</string>
    <string name="title_activity_config">Gol a Gol - Configurações</string>
    <string name="configurations">[Configurações]</string>
    <string name="newArena">Nova Arena</string>
    <string name="remove">Excluir</string>
    <string name="removeArena">Excluir Arena</string>
    <string name="title_activity_score_report">Gol a Gol - Relatório</string>
    <string name="reports">Relatórios</string>
    <string name="total">Total:</string>
    <string name="last_30_days">Últimos 30 dias:</string>
    <string name="last_15_days">Últimos 15 dias:</string>
    <string name="last_7_days">Últimos 7 dias:</string>
    <string name="create">Criar</string>
    <string name="update">Atualizar</string>
    <string name="cancel">Cancelar</string>
    <string name="ok">OK</string>
    <string name="nickname">Apelido</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="title_activity_list_scores">Gol a Gol - Lista de Gols</string>
    <string name="test">Teste</string>
    <string name="list_scores">Listar Gols</string>
    <string name="title_activity_test_connect">TestConnect</string>
    <string name="app_id">318684344914920</string>
    <string name="export">Exportar</string>
    <string name="title_activity_facebook">Gol a Gol - Publicar no Facebook</string>
    <string name="empty"></string>
    <string name="title_activity_intro">Gol a Gol</string>

</resources>