<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white" >
	    
	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

	    <LinearLayout 
	        android:id="@+id/llHeader"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="@color/white">
			<ImageView
			    android:id="@+id/ivBanner"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:contentDescription="@string/banner"
			    android:layout_marginTop="10dp"
			    android:src="@drawable/scoreboard" />
		</LinearLayout>

	    <RelativeLayout
	        android:id="@+id/rlBody"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="5dp"
	        android:layout_marginTop="10dp"
	        android:layout_marginBottom="0dp"
	        android:layout_below="@id/llHeader"
	        android:background="@color/green">
			
	        <TextView
	            android:id="@+id/tvConfirm" 
		        style="@style/defaultFont"
		        android:textSize="30dp"
			    android:layout_centerHorizontal="true"
		        android:layout_marginLeft="20dp"
		        android:layout_marginTop="5dp"        
		        android:text="@string/confirm"/>
	        
		    <TextView
		        android:id="@+id/tvArena"
		        style="@style/defaultFont"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="10dp"
		        android:layout_marginTop="5dp"
		        android:layout_below="@id/tvConfirm"
		        android:text="@string/arena" />

   		    <TextView
		        android:id="@+id/tvArenaConfirm"
		        style="@style/defaultFont"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="10dp"
		        android:layout_marginTop="5dp"
		        android:textColor="@color/grey"
		        android:layout_below="@id/tvArena"
		        android:text="@string/arena" />
		    		
	   	    <TextView
		        android:id="@+id/tvQuantity"
		        style="@style/defaultFont"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/tvArenaConfirm"
		        android:layout_alignLeft="@+id/tvArena"
		        android:layout_marginTop="5dp"
		        android:text="@string/quantity" />

     		<TextView
		        android:id="@+id/tvQuantityConfirm"
		        style="@style/defaultFont"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="10dp"
		        android:layout_marginTop="5dp"
		        android:textColor="@color/grey"
		        android:layout_below="@id/tvQuantity"
		        android:text="@string/quantity" />
	   	    	
	   	    <TextView
		        android:id="@+id/tvDate"
		        style="@style/defaultFont"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/tvQuantityConfirm"
		        android:layout_alignLeft="@+id/tvQuantity"
		        android:layout_marginTop="5dp"
		        android:text="@string/date" />

	         <TextView
		        android:id="@+id/tvDateConfirm"
		        style="@style/defaultFont"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="10dp"
		        android:layout_marginTop="5dp"
		        android:textColor="@color/grey"
		        android:layout_below="@id/tvDate"
		        android:text="@string/date" />
	         
	         <Button
	             android:id="@+id/btClose"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/tvDateConfirm"
		        android:layout_alignLeft="@+id/tvDateConfirm"
		        android:layout_marginBottom="10dp"
		        android:layout_marginTop="20dp"
		        android:layout_marginRight="10dp"
		        android:onClick="close"
		        android:text="@string/close" 	              
	             />
		        
	    </RelativeLayout>
	    
	    <LinearLayout 
	        android:id="@+id/llFooter"
	        android:layout_width="fill_parent"
	        android:layout_height="50dp"
	        android:layout_below="@id/rlBody"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="5dp"
	        android:background="@color/green">
		</LinearLayout>		
	        
	</RelativeLayout>
</ScrollView>